@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - fix a crash when using a depot or fuel station that is not connected to a rail (reported by @YenzRahbek on the forum)
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.0
 Date: 2025-09-26
